[tool.poetry]
name = "robot-2024"
version = "0.1.0"
description = ""
authors = ["Cypheriel <61402923+Cypheriel@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
robotpy = { extras = ["phoenix5"], version = "^2024.3.1.0" }
pyhumps = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.robotpy]
robotpy_version = "2024.3.1.0"
robotpy_extras = [
    # "all",
    "phoenix5",
]
requires = []
