[tool.poetry]
name = "robot-2024"
version = "0.1.0"
description = ""
authors = ["Cypheriel <61402923+Cypheriel@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.dependencies.robotpy]
version = "^2024.3.1.0"
extras = [
    "commands2",
    "phoenix5",
]

[tool.robotpy]
robotpy_version = "2024.3.1.0"
# Read: https://docs.wpilib.org/en/stable/docs/software/vscode-overview/3rd-party-libraries.html
robotpy_extras = [
    "commands2",
    "phoenix5",
]
requires = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
